syntax = "proto3";

option csharp_namespace = "Route256.Week5.Homework.PriceCalculator.gRpcClient.Protos";

import "Protos/decimal.proto";

service History {
    rpc Clear(ClearRequest) returns (Empty);
    rpc Get(GetRequest) returns (stream GetResponse);
}

message ClearRequest {
    int64 user_id = 1;
    repeated int64 calculation_ids = 2;
}

message GetRequest {
    int64 user_id = 1;
}

message GetResponse {
    CargoResponse cargo = 1;
    DecimalValue price = 2;
}

message CargoResponse {
    double volume = 1;
    double weight = 2;
    repeated int64 good_ids = 3;
}

message Empty {
}